gl/wayland: fix loop test hang in glimagesink

Root cause: In glimagesink, gl thread will dispatch event queue and window_show()
is called from streaming thread. Gl thread will empty event queue and
potentially cause gst_gl_wl_display_roundtrip_queue() blocking the
streaming thread to wait for an event occur. Actually, no event can occur
becaue the swap_buffer event is queued by streaming thread but it is blocked.

Solution: Use two event queue, One for surface and another for gl thread

Upstream Status: Pending

bugzilla URL: https://bugzilla.gnome.org/show_bug.cgi?id=758984

Signed-off-by: Haihua Hu <b55597@freescale.com>